v5.0.0/_sources/generated/pcdsdevices.stopper.PPSStopper2PV.rst.txt
pcdsdevices.stopper.PPSStopper2PV
=================================

.. currentmodule:: pcdsdevices.stopper

.. autoclass:: PPSStopper2PV

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - in_signal (FCpt)
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``{prefix}{in_suffix}``
          - Tells us if the stopper is IN or NOT_IN
          - hinted
          - 
    
        * - out_signal (FCpt)
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``{prefix}{out_suffix}``
          - Tells us if the stopper is OUT or NOT_OUT
          - hinted
          - 
    

    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: lightpath_cpts
    .. autoattribute:: transmission
    
    